--- a/css/PreguntasF.css
+++ b/css/PreguntasF.css
@@ -9,6 +9,11 @@
     margin-top: 4em;
 }
 
+.reseña {
+    margin: O auto O auto;
+    width: 390px;
+}
+
 .informacion {
     flex-basis: 100%;
     background-color: #CADDE8;
@@ -27,7 +32,6 @@
     height: 20em;
 }
 
-.card{
+.card {
     margin-bottom: 2em;
 }
-
