--- a/css/PreguntasF.css
+++ b/css/PreguntasF.css
@@ -9,10 +9,17 @@
     margin-top: 4em;
 }
 
-.reseña {
-    margin: O auto O auto;
-    width: 390px;
+.reseñas {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
+
+.reseñas video {
+    border-radius: 10px;
+    margin: 10px;
+}
+
 
 .informacion {
     flex-basis: 100%;
