--- a/sass/PreguntasF.scss
+++ b/sass/PreguntasF.scss
@@ -11,9 +11,16 @@
   margin-top: 4em;
 }
 
-.reseña {
-  margin: O auto O auto;
-  width: 390px;
+.reseñas {
+  text-align: center;
+  .reseñas {
+    text-align: center;
+  }
+}
+
+.reseñas video {
+  border-radius: 10px;
+  margin: 10px;
 }
 
 .informacion {
