--- a/sass/PreguntasF.css
+++ b/sass/PreguntasF.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .principal {
   display: flex;
   flex-direction: row;
@@ -7,6 +8,19 @@
   margin-left: 4em;
   margin-right: 4em;
   margin-top: 4em;
+}
+
+.reseñas {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+.reseñas .video {
+  border-radius: 10px;
+  margin: 10px;
+  width: 25%;
+  height: 20em;
+  margin-left: 2em;
 }
 
 .informacion {
