--- a/css/headers.css
+++ b/css/headers.css
@@ -3,7 +3,7 @@
 .dark-mode {
   background-color: #1a1a1a;
   /* Color de fondo oscuro */
-  color: #ffffff;
+  color: #000000;
   /* Color del texto en modo oscuro */
 }
 
