--- a/css/SegurosM.css
+++ b/css/SegurosM.css
@@ -34,19 +34,19 @@
   transition: transform 0.3s ease-in-out;
 }
 
-.img {
+.fotito {
   flex-basis: 33%;
   transition: transform 0.3s ease-in-out;
   max-width: 100%;
-  height: 22em;
+  height: 25em;
   display: block;
   margin: 0 auto;
-  
+
 }
 
 .card2:hover,
 .card3:hover,
-.img:hover {
+.fotito:hover {
   transform: scale(1.1);
   /* Aumenta la escala al pasar el cursor */
 }
