--- a/sass/SegurosM.css
+++ b/sass/SegurosM.css
@@ -70,13 +70,9 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-bottom: 4em;
-  margin-left: 5em;
-  margin-right: 5em;
-  margin-top: 4em;
+  margin: 4em 5em;
 }
-
-.card1 {
+.principal .card1 {
   flex-basis: 100%;
   background-color: #CADDE8;
   border-radius: 1em;
@@ -84,12 +80,11 @@
   padding: 2em;
   transition: transform 0.3s ease-in-out;
 }
-.card1:hover {
+.principal .card1:hover {
   transform: scale(1.1);
-  /* Aumenta la escala al pasar el cursor */
 }
-
-.card2, .card3 {
+.principal .card2,
+.principal .card3 {
   flex-basis: 33%;
   background-color: #CADDE8;
   border-radius: 1em;
@@ -97,22 +92,20 @@
   padding: 3.5em;
   transition: transform 0.3s ease-in-out;
 }
-.card2:hover, .card3:hover {
+.principal .card2:hover,
+.principal .card3:hover {
   transform: scale(1.1);
-  /* Aumenta la escala al pasar el cursor */
 }
-
-.img {
+.principal .fotito {
   flex-basis: 33%;
   transition: transform 0.3s ease-in-out;
   max-width: 100%;
-  height: 22em;
+  height: 25em;
   display: block;
   margin: 0 auto;
 }
-.img:hover {
+.principal .fotito:hover {
   transform: scale(1.1);
-  /* Aumenta la escala al pasar el cursor */
 }
 
 /* Estilos para la sección del formulario */
@@ -129,11 +122,17 @@
 .formulario .input-group {
   margin-bottom: 15px;
 }
-.formulario .input-group-text {
+.formulario .input-group .input-group-text {
   background-color: #5496BF;
   color: #fff;
 }
 .formulario .btn-primary {
   background-color: #5496BF;
   border-color: #CADDE8;
+}
+
+@media screen and (max-width: 840px) {
+  .card2 {
+    flex-basis: 100%;
+  }
 }/*# sourceMappingURL=SegurosM.css.map */
