--- a/sass/SegurosM.scss
+++ b/sass/SegurosM.scss
@@ -1,56 +1,56 @@
 @import 'variables';
 @import 'mediaQuery';
 
+// Definición de colores
+// $azul-galan: #CADDE8;
+// $azul-hippie: #5496BF;
+// $azul-grisaceo: #465573;
+
 .principal {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-bottom: 4em;
-  margin-left: 5em;
-  margin-right: 5em;
-  margin-top: 4em;
-}
+  margin: 4em 5em;
 
-.card1 {
-  flex-basis: 100%;
-  background-color: $azul-galan;
-  border-radius: 1em;
-  margin-bottom: 1em;
-  padding: 2em;
-  transition: transform 0.3s ease-in-out;
+  .card1 {
+    flex-basis: 100%;
+    background-color: $azul-galan;
+    border-radius: 1em;
+    margin-bottom: 1em;
+    padding: 2em;
+    transition: transform 0.3s ease-in-out;
 
-  &:hover {
-    transform: scale(1.1);
-    /* Aumenta la escala al pasar el cursor */
+    &:hover {
+      transform: scale(1.1); // Aumenta la escala al pasar el cursor
+    }
   }
-}
 
-.card2, .card3 {
-  flex-basis: 33%;
-  background-color: $azul-galan;
-  border-radius: 1em;
-  margin-bottom: 1em;
-  padding: 3.5em;
-  transition: transform 0.3s ease-in-out;
+  .card2,
+  .card3 {
+    flex-basis: 33%;
+    background-color: $azul-galan;
+    border-radius: 1em;
+    margin-bottom: 1em;
+    padding: 3.5em;
+    transition: transform 0.3s ease-in-out;
 
-  &:hover {
-    transform: scale(1.1);
-    /* Aumenta la escala al pasar el cursor */
+    &:hover {
+      transform: scale(1.1); // Aumenta la escala al pasar el cursor
+    }
   }
-}
 
-.img {
-  flex-basis: 33%;
-  transition: transform 0.3s ease-in-out;
-  max-width: 100%;
-  height: 22em;
-  display: block;
-  margin: 0 auto;
-  
-  &:hover {
-    transform: scale(1.1);
-    /* Aumenta la escala al pasar el cursor */
+  .fotito {
+    flex-basis: 33%;
+    transition: transform 0.3s ease-in-out;
+    max-width: 100%;
+    height: 25em;
+    display: block;
+    margin: 0 auto;
+
+    &:hover {
+      transform: scale(1.1); // Aumenta la escala al pasar el cursor
+    }
   }
 }
 
@@ -68,15 +68,22 @@
 
   .input-group {
     margin-bottom: 15px;
-  }
 
-  .input-group-text {
-    background-color: $azul-hippie;
-    color: #fff;
+    .input-group-text {
+      background-color: $azul-hippie;
+      color: #fff;
+    }
   }
 
   .btn-primary {
     background-color: $azul-hippie;
     border-color: $azul-galan;
+  }
+}
+
+// Medias queries para adaptabilidad
+@media screen and (max-width: 840px) {
+  .card2 {
+    flex-basis: 100%;
   }
 }
