--- a/sass/footer.css
+++ b/sass/footer.css
@@ -1,6 +1,7 @@
+@charset "UTF-8";
 /* Css del footer */
 footer {
-  background-color: #CADDE8;
+  background-color: #cadde8;
   align-items: center;
   display: flex;
   justify-content: space-around;
@@ -8,4 +9,160 @@ footer {
 }
 footer img {
   width: 50px;
+}
+
+/* Instagram & Facebook & Twitter */
+.tooltip-container {
+  position: relative;
+  cursor: pointer;
+  transition: all 0.2s;
+  font-size: 17px;
+  border-radius: 10px;
+}
+.tooltip-container:hover .tooltip {
+  top: -150px;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+.tooltip-container .tooltip {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s;
+  border-radius: 15px;
+  box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2), inset -5px -5px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
+}
+
+/* Perfiles para Instagram & Facebook */
+.profile {
+  background: #2a2b2f;
+  border-radius: 10px 15px;
+  padding: 10px;
+  border: 1px solid #52382f;
+}
+.profile.facebook-profile {
+  background: #3b5998;
+  border: 1px solid #29487d;
+}
+
+/* Iconos para Instagram & Facebook & Twitter */
+.icon {
+  text-decoration: none;
+  color: #fff;
+  display: block;
+  position: relative;
+}
+.icon:hover .layer {
+  transform: rotate(-35deg) skew(20deg);
+}
+.icon:hover .text {
+  bottom: -35px;
+  opacity: 1;
+}
+.icon:hover .layer span:nth-child(1) {
+  opacity: 0.2;
+}
+.icon:hover .layer span:nth-child(2) {
+  opacity: 0.4;
+  transform: translate(5px, -5px);
+}
+.icon:hover .layer span:nth-child(3) {
+  opacity: 0.6;
+  transform: translate(10px, -10px);
+}
+.icon:hover .layer span:nth-child(4) {
+  opacity: 0.8;
+  transform: translate(15px, -15px);
+}
+.icon:hover .layer span:nth-child(5) {
+  opacity: 1;
+  transform: translate(20px, -20px);
+}
+.icon .layer {
+  width: 55px;
+  height: 55px;
+  transition: transform 0.3s;
+  border-radius: 15px;
+}
+.icon .layer span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  border: 1px solid #fff;
+  border-radius: 15px;
+  transition: all 0.3s;
+}
+.icon .text {
+  position: absolute;
+  left: 50%;
+  bottom: -5px;
+  opacity: 0;
+  font-weight: 500;
+  transform: translateX(-50%);
+  transition: bottom 0.3s ease, opacity 0.3s ease;
+}
+
+/* Estilos específicos para Instagram */
+.instagramSVG {
+  font-size: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+}
+
+/* Estilos específicos para Facebook */
+.facebookSVG {
+  font-size: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #1877f2;
+  border-radius: 50%;
+  background: linear-gradient(45deg, #1877f2 0%, #3b5998 25%, #1877f2 50%, #3b5998 75%, #1877f2 100%);
+}
+
+/* Estilos generales para el usuario */
+.user {
+  display: flex;
+  gap: 10px;
+}
+.user .img {
+  width: 50px;
+  height: 50px;
+  font-size: 25px;
+  font-weight: 700;
+  border: 1px solid #e6683c;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #fff;
+}
+.user .name {
+  font-size: 17px;
+  font-weight: 700;
+  color: #e6683c;
+}
+.user .details {
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+  color: #fff;
+}
+.user .details .about {
+  color: #ccc;
+  padding-top: 5px;
+}
+
+/* Estilos generales para Twitter */
+.twitterSVG {
+  background: #1da1f2;
 }/*# sourceMappingURL=footer.css.map */
