--- a/sass/headers.css
+++ b/sass/headers.css
@@ -1,88 +1,105 @@
 @charset "UTF-8";
 /* header */
-@media screen and (max-width: 840px) {
-  .card2 {
-    flex-basis: 100%;
-  }
+
+/* Estilos para el modo oscuro */
+.dark-mode {
+  background-color: #1a1a1a;
+  color: #000000;
 }
-/* Media query para pantallas más pequeñas */
-@media screen and (max-width: 840px) {
-  /* Ocultar menú principal */
-  .navMenu {
-    display: none;
-  }
-  /* Mostrar menú acordeón */
-  .navMenuAcordeon {
-    display: block;
-    padding: 0;
-  }
-  .navMenuAcordeon ul {
-    list-style: none;
-    padding: 0;
-  }
-  .navMenuAcordeon ul li {
-    border-bottom: 1px solid #ccc;
-    /* Línea separadora entre elementos */
-    width: 100%;
-  }
-  .navMenuAcordeon ul li :last-child {
-    border-bottom: none;
-    /* Elimina la línea separadora del último elemento */
-  }
-  .navMenuAcordeon ul li a {
-    display: block;
-    padding: 1em;
-    /* Espaciado para cada elemento del acordeón */
-    text-decoration: none;
-    color: #ffffff;
-  }
-  .navMenuAcordeon .nav-bloque {
-    color: #ffffff;
-  }
-  .navMenuAcordeon .nav-bloque ul li {
-    flex: 1;
-    /* Permite que los elementos li se expandan para ocupar todo el ancho */
-    border-radius: 1em;
-    background-color: #5496BF;
-    padding: 5px;
-    margin: 0 2em;
-  }
-  .navMenuAcordeon .nav-bloque ul li a {
-    color: #fff;
-    text-decoration: none;
-  }
-  /* Estilos para el acordeón nuevo */
-  .accordion-content {
-    display: none;
-  }
-  .accordion-input {
-    display: none;
-  }
-  .accordion-input:checked + .accordion-header + .accordion-content {
-    display: block;
-  }
-  .accordion-header {
-    cursor: pointer;
-    color: white;
-  }
+
+/* Estilos para el botón de modo oscuro */
+.toggle {
+  display: inline-block;
+  position: relative;
+  height: 100px;
+  width: 100px;
 }
+
+.toggle:before {
+  box-shadow: 0;
+  border-radius: 84.5px;
+  background: #fff;
+  position: absolute;
+  margin-left: -36px;
+  margin-top: -36px;
+  opacity: 0.2;
+  height: 72px;
+  width: 72px;
+  left: 50%;
+  top: 50%;
+}
+
+.toggle .button {
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  box-shadow: 0 15px 25px -4px rgba(0, 0, 0, 0.5), inset 0 -3px 4px -1px rgba(0, 0, 0, 0.2), 0 -10px 15px -1px rgba(255, 255, 255, 0.6), inset 0 3px 4px -1px rgba(255, 255, 255, 0.2), inset 0 0 5px 1px rgba(255, 255, 255, 0.8), inset 0 20px 30px 0 rgba(255, 255, 255, 0.2);
+  border-radius: 68.8px;
+  position: absolute;
+  background: #eaeaea;
+  margin-left: -34.4px;
+  margin-top: -34.4px;
+  display: block;
+  height: 68.8px;
+  width: 68.8px;
+  left: 50%;
+  top: 50%;
+}
+
+.toggle .label {
+  transition: color 300ms ease-out;
+  line-height: 101px;
+  text-align: center;
+  position: absolute;
+  font-weight: 700;
+  font-size: 28px;
+  display: block;
+  opacity: 0.9;
+  height: 100%;
+  width: 100%;
+  color: rgba(0, 0, 0, 0.9);
+}
+
+.toggle input {
+  opacity: 0;
+  position: absolute;
+  cursor: pointer;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+}
+
+.toggle input:checked~.label {
+  color: rgba(255, 0, 0, 0.8);
+}
+
+.toggle input:active~.button,
+.toggle input:checked~.button {
+  filter: blur(0.5px);
+  box-shadow: 0 10px 25px -4px rgba(0, 0, 0, 0.4), inset 0 -8px 25px -1px rgba(255, 255, 255, 0.9), 0 -10px 15px -1px rgba(255, 255, 255, 0.6), inset 0 8px 20px 0 rgba(0, 0, 0, 0.2), inset 0 0 5px 1px rgba(255, 255, 255, 0.6);
+}
+
+.toggle input:active~.label {
+  font-size: 26px;
+  color: rgba(0, 0, 0, 0.45);
+}
+
 /* Estilos para el carrusel */
 .carrusel {
   width: 60%;
   margin: 0 auto;
   z-index: 1;
 }
+
 .carrusel img {
-  /* !important asegura la prioridad de la altura */
   height: 11em !important;
-  -o-object-fit: scale-down;
-     object-fit: scale-down;
+  object-fit: scale-down;
 }
 
-/* Estilos para el header */
+/* Estilos para el contenedor del header */
 .contenedor {
   position: relative;
-  background-color: #5496BF;
+  background-color: #5496bf;
   overflow: hidden;
   padding: 2em;
   text-align: right;
@@ -94,19 +111,21 @@
   align-items: center;
   font-family: "Gill Sans", "Gill Sans MT";
 }
+
 .contenedor h1 {
   margin: 0;
   color: #ffffff;
   font-size: 3em;
 }
+
 .contenedor img {
   width: 180px;
   height: auto;
 }
 
-/* Esto es el menu */
+/* Estilos para el menú */
 .menu {
-  background-color: #5496BF;
+  background-color: #5496bf;
   padding: 10px;
   position: relative;
   margin-top: 20px;
@@ -116,13 +135,14 @@
   box-shadow: 2px 5px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-.navMenu {
+.menu .navMenu {
   list-style-type: none;
   display: flex;
   gap: 1rem;
-  flex: 1; /* Hace que los elementos li ocupen todo el espacio disponible */
+  flex: 1;
 }
-.navMenu ul {
+
+.menu .navMenu ul {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -130,36 +150,45 @@
   justify-content: space-between;
   width: 100%;
 }
-.navMenu ul li {
-  flex: 1; /* Permite que los elementos li se expandan para ocupar todo el ancho */
+
+.menu .navMenu ul li {
+  flex: 1;
   border-radius: 1em;
   background-color: #465573;
   padding: 5px;
   margin: 0 2em;
 }
-.navMenu ul li a {
+
+.menu .navMenu ul li a {
   color: #fff;
   text-decoration: none;
 }
-.navMenu ul li a :hover {
+
+.menu .navMenu ul li a:hover {
   text-decoration: underline;
 }
 
-.nav-bloque {
+.menu .nav-bloque {
   width: 20%;
   text-align: center;
 }
 
-.desplegable {
+.menu .desplegable {
   display: none;
 }
 
-/* Estilos del menú principal visible en pantallas grandes */
-.navMenu {
-  display: block;
+.menu .navMenuAcordeon {
+  display: none;
 }
 
-/* Estilos del menú acordeón oculto en pantallas grandes */
-.navMenuAcordeon {
-  display: none;
-}/*# sourceMappingURL=headers.css.map */
+@media (max-width: 768px) {
+  .menu .navMenu {
+    display: none;
+  }
+
+  .menu .navMenuAcordeon {
+    display: block;
+  }
+}
+
+/*# sourceMappingURL=headers.css.map */
