--- a/sass/headers.scss
+++ b/sass/headers.scss
@@ -1,6 +1,92 @@
 /* header */
-@import 'variables';
-@import 'mediaQuery';
+@import "variables";
+@import "mediaQuery";
+/* Estilos para el modo oscuro */
+.dark-mode {
+  background-color: #1a1a1a; // Color de fondo oscuro
+  color: #000000; // Color del texto en modo oscuro
+}
+
+/* Estilos para el botón de modo oscuro */
+.toggle {
+  display: inline-block;
+  position: relative;
+  height: 100px;
+  width: 100px;
+
+  &:before {
+    box-shadow: 0;
+    border-radius: 84.5px;
+    background: #fff;
+    position: absolute;
+    margin-left: -36px;
+    margin-top: -36px;
+    opacity: 0.2;
+    height: 72px;
+    width: 72px;
+    left: 50%;
+    top: 50%;
+  }
+
+  .button {
+    transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+    box-shadow: 0 15px 25px -4px rgba(0, 0, 0, 0.5), inset 0 -3px 4px -1px rgba(0, 0, 0, 0.2),
+      0 -10px 15px -1px rgba(255, 255, 255, 0.6), inset 0 3px 4px -1px rgba(255, 255, 255, 0.2),
+      inset 0 0 5px 1px rgba(255, 255, 255, 0.8), inset 0 20px 30px 0 rgba(255, 255, 255, 0.2);
+    border-radius: 68.8px;
+    position: absolute;
+    background: #eaeaea;
+    margin-left: -34.4px;
+    margin-top: -34.4px;
+    display: block;
+    height: 68.8px;
+    width: 68.8px;
+    left: 50%;
+    top: 50%;
+  }
+
+  .label {
+    transition: color 300ms ease-out;
+    line-height: 101px;
+    text-align: center;
+    position: absolute;
+    font-weight: 700;
+    font-size: 28px;
+    display: block;
+    opacity: 0.9;
+    height: 100%;
+    width: 100%;
+    color: rgba(0, 0, 0, 0.9);
+  }
+
+  input {
+    opacity: 0;
+    position: absolute;
+    cursor: pointer;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+
+    &:checked ~ .label {
+      color: rgba(255, 0, 0, 0.8);
+    }
+
+    &:active ~ .button,
+    &:checked ~ .button {
+      filter: blur(0.5px);
+      box-shadow: 0 10px 25px -4px rgba(0, 0, 0, 0.4),
+        inset 0 -8px 25px -1px rgba(255, 255, 255, 0.9), 0 -10px 15px -1px rgba(255, 255, 255, 0.6),
+        inset 0 8px 20px 0 rgba(0, 0, 0, 0.2), inset 0 0 5px 1px rgba(255, 255, 255, 0.6);
+    }
+
+    &:active ~ .label {
+      font-size: 26px;
+      color: rgba(0, 0, 0, 0.45);
+    }
+  }
+}
 
 /* Estilos para el carrusel */
 .carrusel {
@@ -9,17 +95,15 @@
   z-index: 1;
 
   img {
-    /* !important asegura la prioridad de la altura */
-    height: 11em !important;
+    height: 11em !important; // La declaración !important asegura la prioridad de la altura
     object-fit: scale-down;
   }
 }
 
-
-/* Estilos para el header */
+/* Estilos para el contenedor del header */
 .contenedor {
   position: relative;
-  background-color: $azul-hippie;
+  background-color: #5496bf;
   overflow: hidden;
   padding: 2em;
   text-align: right;
@@ -29,7 +113,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: 'Gill Sans', 'Gill Sans MT';
+  font-family: "Gill Sans", "Gill Sans MT";
 
   h1 {
     margin: 0;
@@ -43,10 +127,9 @@
   }
 }
 
-
-/* Esto es el menu */
+/* Estilos para el menú */
 .menu {
-  background-color: $azul-hippie;
+  background-color: #5496bf;
   padding: 10px;
   position: relative;
   margin-top: 20px;
@@ -54,56 +137,61 @@
   align-items: center;
   justify-content: space-around;
   box-shadow: 2px 5px 2px 1px #00000033;
-}
 
-.navMenu {
-  list-style-type: none;
-  display: flex;
-  gap: 1rem;
-  flex: 1; /* Hace que los elementos li ocupen todo el espacio disponible */
-
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  .navMenu {
+    list-style-type: none;
     display: flex;
-    justify-content: space-between;
-    width: 100%;
+    gap: 1rem;
+    flex: 1;
 
-    li {
-      flex: 1; /* Permite que los elementos li se expandan para ocupar todo el ancho */
-      border-radius: 1em;
-      background-color: $azul-grisaceo;
-      padding: 5px;
-      margin: 0 2em;
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
 
-      a {
-        color: #fff;
-        text-decoration: none;
+      li {
+        flex: 1;
+        border-radius: 1em;
+        background-color: #465573;
+        padding: 5px;
+        margin: 0 2em;
 
-        :hover {
-          text-decoration: underline;
+        a {
+          color: #fff;
+          text-decoration: none;
+
+          &:hover {
+            text-decoration: underline;
+          }
         }
       }
     }
   }
-}
 
-.nav-bloque {
-  width: 20%;
-  text-align: center;
-}
+  .nav-bloque {
+    width: 20%;
+    text-align: center;
+  }
 
-.desplegable {
-  display: none;
-}
+  .desplegable {
+    display: none;
+  }
 
-/* Estilos del menú principal visible en pantallas grandes */
-.navMenu {
-  display: block;
-}
+  // Estilos para menú principal y acordeón en diferentes tamaños de pantalla
+  .navMenuAcordeon {
+    display: none;
+  }
 
-/* Estilos del menú acordeón oculto en pantallas grandes */
-.navMenuAcordeon {
-  display: none;
+  @media (max-width: 768px) {
+    .navMenu {
+      display: none;
+    }
+
+    .navMenuAcordeon {
+      display: block;
+    }
+  }
 }
